@@ -8,6 +8,9 @@ Release 2.6.0 - UNRELEASED
 
   IMPROVEMENTS
 
+    YARN-2242. Improve exception information on AM launch crashes. (Li Lu 
+    via junping_du)
+
   OPTIMIZATIONS
 
   BUG FIXES
